# xray

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: sync_dotfiles.py
guest-scripts/: README.md  install.sh  xray-setup.service  xray-setup.sh
src/xray/: __init__.py  base.py  cli.py  config.py  enrichment.py  firewall.py  hooks.py  notifier.py  plugins.py  proxy.py  qemu.py  qmp.py  snapshot.py  ssh.py  vm.py
src/xray/scripts/boot/: .gitkeep  00-verify-firewall.sh  01-verify-dns-enrichment.sh
src/xray/scripts/initial-boot/: .gitkeep  00-setup-firewall.sh  01-setup-dns-enrichment.sh
